--- a/1-04.md
+++ b/1-04.md
@@ -1,10 +1,21 @@
-# Островский Евгений 
 # Домашнее задание к занятию 1.4 Функции, возможности и характеристики сетевых устройств.
 
 ### Цель задания
 
 1. Познакомиться с Cisco Packet Tracer.
 2. Построить локальную сеть с коммутатором.
+
+### Инструкция к выполнению домашнего задания
+
+1. Скачайте [Шаблон для домашнего задания](https://u.netology.ru/backend/uploads/lms/content_assets/file/9352/%D0%A8%D0%B0%D0%B1%D0%BB%D0%BE%D0%BD_%D0%B4%D0%BB%D1%8F_%D0%B4%D0%BE%D0%BC%D0%B0%D1%88%D0%BD%D0%B5%D0%B3%D0%BE_%D0%B7%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D1%8F___%D0%A4%D1%83%D0%BD%D0%BA%D1%86%D0%B8%D0%B8__%D0%B2%D0%BE%D0%B7%D0%BC%D0%BE%D0%B6%D0%BD%D0%BE%D1%81%D1%82%D0%B8_%D0%B8_%D1%85%D0%B0%D1%80%D0%B0%D0%BA%D1%82%D0%B5%D1%80%D0%B8%D1%81%D1%82%D0%B8%D0%BA%D0%B8_%D1%81%D0%B5%D1%82%D0%B5%D0%B2%D1%8B%D1%85_%D1%83%D1%81%D1%82%D1%80%D0%BE%D0%B9%D1%81%D1%82%D0%B2__-_%D0%A4%D0%B0%D0%BC%D0%B8%D0%BB%D0%B8%D1%8F_%D0%98%D0%BC%D1%8F__%D0%A1%D0%94%D0%95%D0%9B%D0%90%D0%99%D0%A2%D0%95_%D0%9A%D0%9E%D0%9F%D0%98%D0%AE_.docx) на своё устройство.
+2. Откройте скачанный файл на личном диске в Google.
+3. В названии файла введите корректное название лекции и вашу фамилию и имя.
+4. Зайдите в «Настройки доступа» и выберите доступ «Просматривать могут все в Интернете, у кого есть ссылка».  Ссылка на инструкцию [Как предоставить доступ к файлам и папкам на Google Диске](https://support.google.com/docs/answer/2494822?hl=ru&co=GENIE.Platform%3DDesktop)
+5. Скопируйте текст задания в свой документ.
+6. Выполните домашнее задание, запишите ответы и приложите необходимые скриншоты в свой Google Doc.
+7. Для проверки домашнего задания преподавателем отправьте ссылку на ваш документ в личном кабинете.
+8. Любые вопросы по решению задач можно задать в чате учебной группы, в чате поддержки или в разделе «Вопросы по заданию» в личном кабинете.
+9. Подробнее о работе с Google-документами и загрузке решения на проверку можно найти в [«Руководстве по работе с материалами для обучения»](https://l.netology.ru/instruktsiya-po-materialami-dlya-obucheniya)
 
 ### Чеклист готовности к домашнему заданию
 
@@ -18,9 +29,7 @@
 
 В программе Cisco Packet Tracer составьте сеть, состоящую из двух коммутаторов, к каждому из которых подключено по два компьютера.
 
-### Ответ
-
-![41](https://github.com/joos-ntw/bntw-homeworks/blob/main/img/41.png)
+*Приведите ответ в виде снимка экрана.*
 
 ------
 
@@ -30,9 +39,7 @@
 
 Проверьте связь с помощью ping.
 
-### Ответ
-
-![42](https://github.com/joos-ntw/bntw-homeworks/blob/main/img/42.png)
+*Приведите ответ в виде снимка экрана удачной работы утилиты ping.*
 
 ------
 
@@ -40,9 +47,7 @@
 
 Перейдите на коммутатор и выполните команду **show mac-address-table**
 
-### Ответ
-
-![43](https://github.com/joos-ntw/bntw-homeworks/blob/main/img/43.png)
+*Приведите ответ в виде снимка экрана.*
 
 ------
 
@@ -54,10 +59,5 @@
 
 Соедините коммутаторы дополнительным проводом. Что произойдет в этом случае?
 
-### Ответ
+*Приведите ответ в свободной форме.*
 
-По умолчанию в CPT отработает spanning tree protocol, один из роутеров станет корневым и от него построится маршрут. В итоге только 1 канал будет активным, в случае потери связи по рабочему канал - запасной канал начнет работать и станет основным.
-
-![44](https://github.com/joos-ntw/bntw-homeworks/blob/main/img/44.png)
-
-![45](https://github.com/joos-ntw/bntw-homeworks/blob/main/img/45.png)
